# sgd-back

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.yml
data/: initial.json
keys/: private.pem  public.pem
public/: admin.py  models.py  signals.py  urls.py
public/api/serializer/: calification_serializer.py  scheduled_service_serializer.py  service_serializer.py  user_serializer.py
public/api/viewset/: calification_viewset.py  scheduled_service_viewset.py  service_viewset.py  user_viewset.py
public/migrations/: 0001_initial.py
sgd/: asgi.py  authentication.py  backends.py  constants.py  keys.py  settings.py  token.py  urls.py  wsgi.py
sgd_grpc/: chatbot.py  codegen.py  server.py  sgd_types.py  spacy_download.py
sgd_grpc/proto/: sgd_pb2.py  sgd_pb2_grpc.py
utils/: pagination.py  permissions.py  text.py  validators.py
